--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,11 @@
-{{ content }}
+<!DOCTYPE html>
+<html>
+  {% include head.html %}
+  <body>
+    {% include header.html %}
+    <div> 
+      {{ content }} 
+    </div>
+    {% include footer.html %}
+  </body>
+</html>
