update head, nav, footer

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,10 +49,9 @@
 <!-- meta name="geo.placename" content="city/town"><eg. content="New York City" -->
 
 <!-- Link to an external CSS file -->
+<link rel="stylesheet" href="/css/main.css">
 <!-- BootStrap CDN --> 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="styles.css">
-
 
 <!-- Provides information about an author or another person -->
 <link rel="me" href="mailto:{{ site.email }}">
