🔗update fontawesome icon ink color

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
     <div class="container">
      <span class="text-muted">{{ site.title }}</span>
+     {% include social.html %}
     </div>
 </footer>
