--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,8 @@
 <!-- BootStrap CDN --> 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+
+<script src="https://kit.fontawesome.com/{{ site.font_awesome_id }}.js" crossorigin="anonymous"></script>
 <!-- Provides information about an author or another person -->
 <link rel="me" href="mailto:{{ site.email }}">
 <link rel="me" href="sms:+{{ site.phonenumber }}">
