--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,9 +12,10 @@
             </li>
         {% endfor %}
     </ul>
+    <!--
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    </form> -->
   </div>
 </nav>
