📚 update home page, add bibliography and jekylly-scholar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a href={{ site.url }}><img src="/assets/img/icons/favicon.ico" class="dumbarton-icon"></a>
   <a class="navbar-brand" href="#">{{ site.title }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
