--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,8 +52,6 @@
 <link rel="stylesheet" href="/css/main.css">
 <!-- BootStrap CDN --> 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
 <script src="https://kit.fontawesome.com/{{ site.font_awesome_id }}.js" crossorigin="anonymous"></script>
 <!-- Provides information about an author or another person -->
 <link rel="me" href="mailto:{{ site.email }}">
@@ -106,7 +104,9 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 <script>
-  // function(s) go here
+    $(document).ready(function() {
+        $(".toast").toast('show');
+    });
 </script>
 <noscript>
   <!-- No JS alternative -->
