--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,7 @@ html {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
   }
-  
-  
+
   /* Custom page CSS
   -------------------------------------------------- */
   /* Not required for template or sticky footer method. */
@@ -79,4 +78,8 @@ a:link{
 .dumbarton-spacer {
   padding-bottom: 50px;
   padding-top: 50px;
+}
+
+.publications {
+  text-align: left;
 }
