update home page tab section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,3 +4,9 @@
         {% include social.html %}
     </div>
 </footer>
+
+<script>
+  $(function () {
+    $('[data-toggle="popover"]').popover()
+  })
+</script>
