--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,9 +48,117 @@ layout: default
               </div>
             {% endif %}
           {% else %}
-            <div class="tab-pane" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-              <p class="card-text">{{section.description}}</p>
-            </div>
+            {% if section.name == "Bug Bounties" %}
+                <div class="tab-pane" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+                  <h5 class="card-title text-center">{{section.description}}</h5>
+                  <p class="card-text">
+                      <table class="table">
+                        <thead class="thead-dark">
+                          <tr>
+                            <th scope="col">Date</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">CVE</th>
+                            <th scope="col">Platform</th>
+                            <th scope="col">Vendor</th>
+                            <th scope="col">Link</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for entry in site.data.bounties %}
+                            <tr>
+                              <th scope="row">{{ entry.Date }}</th>
+                              <td>{{ entry.Title }}</td>
+                              <td>{{ entry.CVE }}</td>
+                              <td>{{ entry.Platform }}</td>
+                              <td>{{ entry.Vendor }}</td>
+                              <td><a href="{{ entry.Link }}"><i class="fas fa-external-link-alt"></i></a></td>
+                            </tr>
+                          {% endfor %}
+                        </tbody>
+                      </table>
+                  </p>
+                </div>    
+            {% elsif section.name == "Presentations" %}
+              <div class="tab-pane" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+                <h5 class="card-title text-center">{{section.description}}</h5>
+                <p class="card-text">{% bibliography -f presentations %}</p>              
+              </div>
+           {% elsif section.name == "Open Source Software" %}
+              <div class="tab-pane" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+                <h5 class="card-title text-center">{{section.description}}</h5>
+                <p class="card-text">
+                  <div class="card-columns">
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title that wraps to a new line</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+  </div>
+  <div class="card p-3">
+    <blockquote class="blockquote mb-0 card-body">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+      <footer class="blockquote-footer">
+        <small class="text-muted">
+          Someone famous in <cite title="Source Title">Source Title</cite>
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card bg-primary text-white text-center p-3">
+    <blockquote class="blockquote mb-0">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+      <footer class="blockquote-footer">
+        <small>
+          Someone famous in <cite title="Source Title">Source Title</cite>
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+  <div class="card text-center">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img" src="..." alt="Card image">
+  </div>
+  <div class="card p-3 text-right">
+    <blockquote class="blockquote mb-0">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+      <footer class="blockquote-footer">
+        <small class="text-muted">
+          Someone famous in <cite title="Source Title">Source Title</cite>
+        </small>
+      </footer>
+    </blockquote>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+                </p>              
+              </div>
+            {% else %}
+              <div class="tab-pane" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab"> 
+                <h5 class="card-title text-center">{{section.description}}</h5>
+                <p class="card-text">{{section.content}}</p>
+              </div>
+            {% endif %}
           {% endif %}
         {% endfor %}
       </div>
@@ -76,3 +184,4 @@ layout: default
     $(this).tab('show')
     })
 </script>
+
