define blog theme using bootstrap multi column cards

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,10 +13,16 @@
             </li>
         {% endfor %}
     </ul>
+    <ul class="navbar-nav  justify-content-end">
+      <li class="nav-item">
+        {% include social.html %}
+      </li>
+    </ul>
     <!--
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form> -->
+    
   </div>
 </nav>
