--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
+<div class="dumbarton-spacer">
+</div>
+
 <footer class="footer">
     <div class="container">
      <span class="text-muted">{{ site.title }}</span>
