hotfix navbar home link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a href={{ site.url }}><img src="/assets/img/icons/favicon.ico" class="dumbarton-icon"></a>
-  <a class="navbar-brand" href="#">{{ site.title }}</a>
+  <a href="/index.html"><img src="/assets/img/icons/favicon.ico" class="dumbarton-icon"></a>
+  <a class="navbar-brand" href="/index.html">{{ site.title }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
