update publications, header, footer js scripts, organize _config.yml

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,11 @@
   <body>
     {% include header.html %}
     {% include nav.html %}
+    <div class="dumbarton-spacer-sm"></div>
     <div class="container">
       {{ content }}
     </div>
+    <div class="dumbarton-spacer"></div>
     {% include footer.html %}
   </body>
 </html>
