--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,11 @@
+
+{% if site.nav-color == "dark" %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+{% elsif site.nav-color == "light"  %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+{% else %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+{% endif %}
   <a href="/index.html"><img src="/assets/img/icons/favicon.ico" class="dumbarton-icon"></a>
   <a class="navbar-brand" href="/index.html">{{ site.title }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
