update bibliography formatting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,6 +50,7 @@
 
 <!-- Link to an external CSS file -->
 <link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 <!-- BootStrap CDN --> 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://kit.fontawesome.com/{{ site.font_awesome_id }}.js" crossorigin="anonymous"></script>
@@ -93,7 +94,9 @@
 
 <!-- Used for adding in-document CSS -->
 <style>
-  /* ... */
+body {
+        font-family: '{{ site.font }}', serif;
+      }
 </style>
 
 
