add social options, format home page, create transparent theme option for navbar

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -6,4 +6,8 @@
 <a href="https://github.com/{{ site.github }}"><i class="fab fa-github-square fa-lg"></i></a>
 {{ elseif site.linkedin }}
 <a href="https://www.linkedin.com/in/{{ site.linkedin }}"><i class="fab fa-linkedin fa-lg"></i></a>
+{{ elseif site.codepen }}
+<a href="https://codepen.io/{{ site.codepen }}"><i class="fab fa-codepen fa-lg"></i></a>
+{{ elseif site.stackoverflow }}
+<a href="https://stackoverflow.com/users/story/{{ site.stackoverflow }}"><i class="fab fa-stack-overflow fa-lg"></i></a>
 {{ endif }}
