--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -30,3 +30,31 @@ html {
 .title {
   font-style: italic;
 } 
+
+.author {
+  a {
+    border-bottom: 1px dashed var(--global-theme-color);
+    &:hover {
+        border-bottom-style: solid;
+        text-decoration: none;
+    }
+  }
+
+.links {
+  a.btn {
+    color: var(--global-text-color);
+    border: 1px solid var(--global-text-color);
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    &:hover {
+      color: var(--global-theme-color);
+      border-color: var(--global-theme-color);
+    }
+  }
+}
+
+.dropdown-toggle::after {
+  display: none;
+}
