--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,9 @@
 {% if site.nav-color == "dark" %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 {% elsif site.nav-color == "light"  %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+{% elsif site.nav-color == "transparent"  %}
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent">
 {% else %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 {% endif %}
@@ -11,7 +13,7 @@
   -->
   <a class="navbar-brand" href="/index.html">{{ site.title }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <i class="{{ site.nav-dIcon }}"></i>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
