--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -2,22 +2,11 @@
 ---
 
 <div class="row">
-  
-  <div class="col-sm-2 abbr">
-  {% if entry.abbr %}
-    {% if site.data.venues[entry.tag] %}
-    <abbr class="badge badge-pill badge-primary"><a class="card-link" href="{{site.data.venues[entry.tag].url}}" target="_blank">{{entry.tag}}</a></abbr>
-    {% else %}
-    <abbr class="badge badge-pill badge-primary">{{entry.tag}}</abbr>
-    {% endif %}
-  {% endif %}
-  </div> 
- 
   <div id="{{entry.key}}" class="col-sm-8">
     {% if entry.type == "thesis" %}
       {{reference}}
     {% else %}
-      <div class="title">{{entry.title}}</div>
+      <div class="title font-weight-bold">{{entry.title}}</div>
       <div class="author">
         {% for author in entry.author_array %}
           {% if forloop.length == 1 %}
