--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="card mb-3 mx-auto border-light mb-3" style="max-width: 100%;">
+<div class="card mb-3 mx-auto border-white mb-3" style="max-width: 100%;">
   <div class="row no-gutters">
     <div class="col-md-4">
       <img src="{{ site.profile_image }}" class="img-thumbnail rounded float-left" alt="...">
@@ -34,7 +34,7 @@ layout: default
 </div>
 
 <!-- Recent Work Section --> 
-<h5 class="card-title text-center">My Latest Work</h5>
+<h5 class="card-title text-center"></h5>
 <div class="card mx-auto" style="max-width: 100%;">
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs" id="test-list" role="tablist">
